--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "mongoose": "^5.0.15",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "sequelize": "^4.37.6"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
