--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "sequelize": "^4.37.6"
   },
   "devDependencies": {
+    "browser-sync": "^2.24.4",
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sass": "^4.0.1",
     "nodemon": "^1.17.3"
   }
 }
