--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "dependencies": {
     "async": "^2.6.0",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
+    "debug": "^3.1.0",
     "express": "~4.16.0",
     "express-validator": "^5.1.2",
     "http-errors": "~1.6.2",
     "mongoose": "^5.0.15",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11",
+    "pug": "^2.0.3",
     "sequelize": "^4.37.6"
   },
   "devDependencies": {
@@ -23,6 +23,6 @@
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-sass": "^4.0.1",
-    "nodemon": "^1.17.4"
+    "nodemon": "^1.17.3"
   }
 }
